--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,19 @@
       <version>${spring.version}</version>
     </dependency>
 
+    <!-- Core Spring AOP support -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aspects</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <!-- AspectJ annotation support -->
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.21</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>SpringMVCTest</finalName>
